fixed the query for proposals, did not work on postgresql. Also fixed logins div position on mobile devices

--- a/app/assets/stylesheets/header.css.sass
+++ b/app/assets/stylesheets/header.css.sass
@@ -237,7 +237,6 @@
 
 		#login
 			right: 0
-			margin: 90px 0 0 0
 
 			#logout
 				float: right
